--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
+    "sequelize": "^6.21.6",
+    "sqlite3": "^5.0.11"
+  }
 }
