--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tensorflow-models/mobilenet": "^2.1.0",
+    "@tensorflow/tfjs-node": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
